Fixed spacing between elements

--- a/home.css
+++ b/home.css
@@ -110,6 +110,7 @@ footer a:hover {
     display: flex;
     flex-direction: row;
     border: 1px solid black;
+    margin: 20px;
 }
 
 .sections div {
